<resources>
    <string name="app_name">SQLite CRUD</string>
    <string name="create">Cadastrar</string>
    <string name="update">Atualizar</string>
    <string name="delete">Deletar</string>
    <string name="list">Listar</string>
    <string name="address">Endereço</string>
    <string name="name">Nome do Usuário</string>
    <string name="age">Idade</string>
    <string name="cancel">Cancelar</string>
    <string name="phone">Telefone</string>
</resources>
